Add playlist and playlist tracks creation
 * You can now create playlists, with songs being put into
   the playlists for you
 * Cleaned up the URLs to encode the data being used by the user

--- a/public/artistList/index.html
+++ b/public/artistList/index.html
@@ -8,6 +8,7 @@
     <div class="container">
       <form action="/processArtists" method="post">
         <textarea name="artistsInput">Give us your list of artsists (newline separated)</textarea>
+        <input type="number" name="tracksPerArtist" placeholder="Songs per artist" value="Submit"/>
         <input type="submit" value="Submit"/>
       </form>
     </div>
