--- a/public/done/index.html
+++ b/public/done/index.html
@@ -7,8 +7,7 @@
 
   <body>
     <div class="container">
-      <h1>Recommendify</h1>
-      <a href="/login">Let's Go!</a>
+      <h1>Playlist Created!</h1>
     </div>
   </body>
 </html>
