Add link to new playlist, and fix cookie maintenance
 * The refresh token was getting deleted because Spotify's
   API doesn't return a new token with the refresh call, and
   we were always setting it to be whatever is in the response;
   in this case, undef.
 * Added a link to the new playlist on the done page. People
   weren't too sure where the new playlist was being made, so
   this should clear that up.

--- a/public/done/index.html
+++ b/public/done/index.html
@@ -2,12 +2,20 @@
 <html>
   <head>
     <title>Recommendify</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="./../style/main.css">
   </head>
 
   <body>
     <div class="container">
-      <h1>Playlist Created!</h1>
+      <a id ='playlistLink' href="/">
+        <h1>Playlist Created!</h1>
+      </a>
     </div>
   </body>
+  <script>
+    const url = new URL(window.location.href);
+    const playlistUri = url.searchParams.get("playlistUri");
+
+    document.getElementById("playlistLink").href=playlistUri;
+  </script>
 </html>
