--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
   <body>
     <div class="container">
-      <h1>Recommendify</h1>
-      <a href="/login">Let's Go!</a>
+      <h1 class ="titleHeading">Recommendify</h1>
+      <a class='aButton' href="/login">Let's Go!</a>
     </div>
   </body>
 </html>
